--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,12 @@ videos/*
 yolov5/
 .DS_Store
 .idea/
-export-result.ndjson
+*.ndjson
 yolov5m.pt
 yolov8m.pt
+yolov8n.pt
 credentials.json
 global_keys.json
+dataset_1.zip
+__pycache__/
+!runs/detect/train7/
